--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - 'pypy'
 
 install:
-  - 'travis_retry pip install -e . --use-mirrors'
+  - 'travis_retry pip install -e ".[test]" --use-mirrors'
   - 'travis_retry pip install coveralls --use-mirrors'
 
 script: 'py.test --pep8 --cov flask_components'
